# Centribal

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
Backend/: Dockerfile  README.md  pylintrc  pyproject.toml  tox.ini
Backend/core/: pagination.py  settings.py  urls.py
Backend/orders/: admin.py  models.py  serializers.py  urls.py  views.py
Backend/orders/migrations/: 0001_initial.py  0002_alter_orderdetail_quantity.py
Backend/products/: models.py  serializers.py  tests.py  urls.py  views.py
Backend/products/migrations/: 0001_initial.py
Backend/templates/emails/: user_confirm_account.html  user_confirm_message.html  user_reset_password.html
Backend/tests/: settings.py  test_orders.py  test_products.py
Backend/users/: models.py  serializers.py  urls.py  views.py
Backend/users/migrations/: 0001_initial.py
Database/: dump.sql
Frontend/: Dockerfile  README.md  default.conf  package-lock.json  package.json  quasar.config.js
Frontend/src/boot/: axios.ts
Frontend/src/components/: DataTable.vue  NavigationBar.vue
Frontend/src/css/: app.scss  quasar.variables.scss
Frontend/src/helpers/: httpClient.js  utils.js
Frontend/src/layouts/: MainLayout.vue
Frontend/src/pages/: Dashboard.vue  (+8 more)
core/: settings.py  urls.py  utils.py
products/: admin.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_historicalproducts_reference_and_more.py  0003_alter_historicalproducts_price_and_more.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
(+27 files in other folders)
